history 저장시 날짜, 이름, code 중복 시 저장 안하게 로직 수정